--- a/37711 assignment 2/DATA37711_AS2_Adrian Cao.ipynb
+++ b/37711 assignment 2/DATA37711_AS2_Adrian Cao.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -298,25 +298,25 @@
     "\n",
     "Let’s go through each part of the question, detailing the solutions.\n",
     "\n",
-    "## (a) Suggest a Link Function for $ f_\\mu $and $ f_\\sigma $\n",
+    "## (a) Suggest a Link Function for $f_\\mu$ and $f_\\sigma$\n",
     "\n",
-    "Given a neural network $ g : \\mathbb{R}^p \\rightarrow \\mathbb{R}^2 $, which outputs a 2-dimensional vector representing an unprocessed version of $ f_\\mu(X) $ and $ f_\\sigma(X) $, we want to map these outputs to meaningful representations for the conditional mean $ f_\\mu $ and the conditional variance $ f_\\sigma^2 $.\n",
+    "Given a neural network $g : \\mathbb{R}^p \\rightarrow \\mathbb{R}^2$, which outputs a 2-dimensional vector representing an unprocessed version of $f_\\mu(X)$ and $f_\\sigma(X)$, we want to map these outputs to meaningful representations for the conditional mean $f_\\mu$ and the conditional variance $f_\\sigma^2$.\n",
     "\n",
-    "1. **For $ f_\\mu(X) $**: No transformation is necessary; we can directly use the first component of $ g(X) $ as $ f_\\mu(X) $.\n",
+    "1. **For $f_\\mu(X)$**: No transformation is necessary; we can directly use the first component of $g(X)$ as $f_\\mu(X)$.\n",
     "   \n",
-    "2. **For $ f_\\sigma(X) $**: Since $ f_\\sigma(X) $ represents a standard deviation (which must be non-negative), we use an exponential or softplus link function to ensure positivity. A common choice is the exponential function, i.e.,\n",
+    "2. **For $f_\\sigma(X)$**: Since $f_\\sigma(X)$ represents a standard deviation (which must be non-negative), we use an exponential or softplus link function to ensure positivity. A common choice is the exponential function, i.e.,\n",
     "   $$\n",
     "   f_\\sigma(X) = \\exp(g_2(X)),\n",
     "   $$\n",
-    "   where $ g_2(X) $ is the second component of the output vector from $ g(X) $.\n",
+    "   where $g_2(X)$ is the second component of the output vector from $g(X)$.\n",
     "\n",
     "Thus, the final transformations are:\n",
-    "- $ f_\\mu(X) = g_1(X) $\n",
-    "- $ f_\\sigma(X) = \\exp(g_2(X)) $\n",
+    "- $f_\\mu(X) = g_1(X)$\n",
+    "- $f_\\sigma(X) = \\exp(g_2(X))$\n",
     "\n",
-    "### (b) Loss Function Based on a Normal Model $ Y | X \\sim \\mathcal{N}(f_\\mu(X), f_\\sigma(X)^2) $\n",
+    "## (b) Loss Function Based on a Normal Model $Y | X \\sim \\mathcal{N}(f_\\mu(X), f_\\sigma(X)^2)$\n",
     "\n",
-    "For a Gaussian likelihood, the probability density function of $ Y $ given $ X $ is:\n",
+    "For a Gaussian likelihood, the probability density function of $Y$ given $X$ is:\n",
     "$$\n",
     "p(Y | X) = \\frac{1}{\\sqrt{2 \\pi f_\\sigma(X)^2}} \\exp\\left(-\\frac{(Y - f_\\mu(X))^2}{2 f_\\sigma(X)^2}\\right).\n",
     "$$\n",
@@ -325,42 +325,42 @@
     "$$\n",
     "\\mathcal{L}(Y, X) = -\\log p(Y | X).\n",
     "$$\n",
-    "Substitute the expression for $ p(Y | X) $ into this equation:\n",
+    "Substituting the expression for $p(Y | X)$ into this equation:\n",
     "$$\n",
     "\\mathcal{L}(Y, X) = \\frac{(Y - f_\\mu(X))^2}{2 f_\\sigma(X)^2} + \\frac{1}{2} \\log(2 \\pi f_\\sigma(X)^2).\n",
     "$$\n",
     "\n",
-    "Expanding further, the final loss function to minimize over all samples $ (X_i, Y_i) $ is:\n",
+    "Expanding further, the final loss function to minimize over all samples $(X_i, Y_i)$ is:\n",
     "$$\n",
     "\\text{Loss} = \\sum_{i=1}^N \\left( \\frac{(Y_i - f_\\mu(X_i))^2}{2 f_\\sigma(X_i)^2} + \\frac{1}{2} \\log(2 \\pi f_\\sigma(X_i)^2) \\right).\n",
     "$$\n",
     "\n",
-    "### (c) Define and Train a Neural Network Model\n",
+    "## (c) Define and Train a Neural Network Model\n",
     "\n",
-    "We will define a neural network in PyTorch that outputs both $ f_\\mu(X) $ and $ f_\\sigma(X) $. We will then fit this model on the taxi dataset.\n",
+    "We will define a neural network in PyTorch that outputs both $f_\\mu(X)$ and $f_\\sigma(X)$. We will then fit this model on the taxi dataset.\n",
     "\n",
     "Here’s the code for setting up the neural network, baseline models, and the training process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10, Validation Loss: 3.0261\n",
-      "Epoch 2/10, Validation Loss: 2.8786\n",
-      "Epoch 3/10, Validation Loss: 2.8684\n",
-      "Epoch 4/10, Validation Loss: 2.8432\n",
-      "Epoch 5/10, Validation Loss: 2.8461\n",
-      "Epoch 6/10, Validation Loss: 2.8306\n",
-      "Epoch 7/10, Validation Loss: 2.8302\n",
-      "Epoch 8/10, Validation Loss: 2.8313\n",
-      "Epoch 9/10, Validation Loss: 2.8299\n",
-      "Epoch 10/10, Validation Loss: 2.8292\n"
+      "Epoch 1/10, Validation Loss: 2.9607\n",
+      "Epoch 2/10, Validation Loss: 2.8664\n",
+      "Epoch 3/10, Validation Loss: 2.8592\n",
+      "Epoch 4/10, Validation Loss: 2.8382\n",
+      "Epoch 5/10, Validation Loss: 2.8510\n",
+      "Epoch 6/10, Validation Loss: 2.8392\n",
+      "Epoch 7/10, Validation Loss: 2.8241\n",
+      "Epoch 8/10, Validation Loss: 2.8219\n",
+      "Epoch 9/10, Validation Loss: 2.8191\n",
+      "Epoch 10/10, Validation Loss: 2.8081\n"
      ]
     }
    ],
@@ -445,22 +445,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d) Predicting Probability that Trip Duration is Less Than 45 Minutes\n",
+    "## (d) Predicting Probability that Trip Duration is Less Than 45 Minutes\n",
     "\n",
-    "Since $ Y | X \\sim \\mathcal{N}(f_\\mu(X), f_\\sigma(X)^2) $, the probability that a trip will take less than 45 minutes is:\n",
+    "Since $Y | X \\sim \\mathcal{N}(f_\\mu(X), f_\\sigma(X)^2)$, the probability that a trip will take less than 45 minutes is:\n",
     "$$\n",
     "P(Y < 45 | X) = \\Phi\\left(\\frac{45 - f_\\mu(X)}{f_\\sigma(X)}\\right),\n",
     "$$\n",
-    "where $ \\Phi $ is the cumulative distribution function (CDF) of the standard normal distribution.\n",
+    "where $\\Phi$ is the cumulative distribution function (CDF) of the standard normal distribution.\n",
     "\n",
     "## (e) Estimating Probabilities on the Test Set\n",
     "\n",
-    "Using the trained model, we can estimate these probabilities on the test set. We’ll use the model’s predictions for $ f_\\mu(X) $ and $ f_\\sigma(X) $ to compute $ P(Y < 45 | X) $ for each test example, then measure accuracy by comparing these predictions to the actual outcomes."
+    "Using the trained model, we can estimate these probabilities on the test set. We’ll use the model’s predictions for $f_\\mu(X)$ and $f_\\sigma(X)$ to compute $P(Y < 45 | X)$ for each test example, then measure accuracy by comparing these predictions to the actual outcomes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,22 +472,10 @@
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "Expected tensor for argument #1 'indices' to have one of the following scalar types: Long, Int; but got torch.FloatTensor instead (while checking arguments for embedding)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m test_targets \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m X_batch, y_batch \u001b[38;5;129;01min\u001b[39;00m test_loader:\n\u001b[1;32m---> 16\u001b[0m     probs \u001b[38;5;241m=\u001b[39m \u001b[43mpredict_probability\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m     test_probs\u001b[38;5;241m.\u001b[39mextend(probs)\n\u001b[0;32m     18\u001b[0m     test_targets\u001b[38;5;241m.\u001b[39mextend(y_batch\u001b[38;5;241m.\u001b[39mnumpy())\n",
-      "Cell \u001b[1;32mIn[9], line 7\u001b[0m, in \u001b[0;36mpredict_probability\u001b[1;34m(model, X)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m----> 7\u001b[0m     mean, std \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m prob \u001b[38;5;241m=\u001b[39m norm\u001b[38;5;241m.\u001b[39mcdf((\u001b[38;5;241m45\u001b[39m \u001b[38;5;241m-\u001b[39m mean\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39msqueeze()) \u001b[38;5;241m/\u001b[39m std\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39msqueeze())\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m prob\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1553\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1551\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1552\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1553\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1562\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1557\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1558\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1559\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1560\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1561\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1562\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1564\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1565\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[7], line 38\u001b[0m, in \u001b[0;36mRetailEmbeddingModel.forward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[1;32m---> 38\u001b[0m     stockcode \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstockcode_embedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m     customerid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcustomerid_embedding(x[:, \u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m     40\u001b[0m     x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([stockcode, customerid], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1553\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1551\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1552\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1553\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1562\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1557\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1558\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1559\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1560\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1561\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1562\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1564\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1565\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\modules\\sparse.py:164\u001b[0m, in \u001b[0;36mEmbedding.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 164\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    165\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpadding_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax_norm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    166\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnorm_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscale_grad_by_freq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msparse\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\a_i_b\\miniconda3\\Lib\\site-packages\\torch\\nn\\functional.py:2267\u001b[0m, in \u001b[0;36membedding\u001b[1;34m(input, weight, padding_idx, max_norm, norm_type, scale_grad_by_freq, sparse)\u001b[0m\n\u001b[0;32m   2261\u001b[0m     \u001b[38;5;66;03m# Note [embedding_renorm set_grad_enabled]\u001b[39;00m\n\u001b[0;32m   2262\u001b[0m     \u001b[38;5;66;03m# XXX: equivalent to\u001b[39;00m\n\u001b[0;32m   2263\u001b[0m     \u001b[38;5;66;03m# with torch.no_grad():\u001b[39;00m\n\u001b[0;32m   2264\u001b[0m     \u001b[38;5;66;03m#   torch.embedding_renorm_\u001b[39;00m\n\u001b[0;32m   2265\u001b[0m     \u001b[38;5;66;03m# remove once script supports set_grad_enabled\u001b[39;00m\n\u001b[0;32m   2266\u001b[0m     _no_grad_embedding_renorm_(weight, \u001b[38;5;28minput\u001b[39m, max_norm, norm_type)\n\u001b[1;32m-> 2267\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membedding\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpadding_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscale_grad_by_freq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msparse\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Expected tensor for argument #1 'indices' to have one of the following scalar types: Long, Int; but got torch.FloatTensor instead (while checking arguments for embedding)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9925\n"
      ]
     }
    ],
